--- a/assets/compat/bitcoind_config_rules.yaml
+++ b/assets/compat/bitcoind_config_rules.yaml
@@ -4,3 +4,9 @@
     - SET:
         var: "rpc.enable"
         to-value: true
+- rule: '''advanced.pruning.mode = "disabled"'
+  description: 'Pruning must be disabled to use Bitcoin Core directly. To use with a pruned node, set your RPC connection to "Bitcoin Proxy" instead.'
+  suggestions:
+    - SET:
+        var: "advanced.pruning.mode"
+        to-value: "disabled"
