--- a/assets/compat/config_spec.yaml
+++ b/assets/compat/config_spec.yaml
@@ -1,25 +1,25 @@
 # To utilize the default config system built in the compat system image, this file is required. It defines the *structure* of the configuration file. These structured options display as changeable UI elements within the "Config" section of the service details page in the Embassy UI
 
-# tor-address:
-#   name: Network Tor Address
-#   description: The Tor address for the network interface. 
-#   type: pointer
-#   subtype: package
-#   package-id: lightning-terminal
-#   target: tor-address
-#   interface: main
-# lan-address:
-#   name: Network LAN Address
-#   description: The LAN address for the network interface. 
-#   type: pointer
-#   subtype: package
-#   package-id: lightning-terminal
-#   target: lan-address
-#   interface: main
+tor-address:
+  name: Network Tor Address
+  description: The Tor address for the network interface. 
+  type: pointer
+  subtype: package
+  package-id: sensei
+  target: tor-address
+  interface: main
+lan-address:
+  name: Network LAN Address
+  description: The LAN address for the network interface. 
+  type: pointer
+  subtype: package
+  package-id: sensei
+  target: lan-address
+  interface: main
 password:
   type: string
-  name: Lightning Terminal Password
-  description: Administrator password for Lightning Terminal
+  name: Sensei Password
+  description: Administrator password for Sensei
   nullable: false
   copyable: true
   masked: true
@@ -28,18 +28,18 @@ password:
     len: 22
 bitcoind:
   type: union
-  name: Bitcoin Core RPC for Faraday
-  description: The Bitcoin Core node for Faraday to connect to
+  name: Bitcoin
+  description: The Bitcoin node to connect to
   tag:
     id: type
     name: Type
     description: |
-      - Internal: The Bitcoin Core service installed to your Embassy
-      - Internal Proxy: The Bitcoin Proxy service installed on your Embassy
+      - Bitcoin Core: The Bitcoin Core service installed to your Embassy
+      - Bitcoin Proxy: The Bitcoin Proxy service installed on your Embassy
     variant-names:
-      internal: Internal
-      internal-proxy: Internal (Bitcoin Proxy)
-  default: internal
+      internal: Bitcoin Core
+      internal-proxy: Bitcoin Proxy
+  default: internal-proxy
   variants:
     internal:
       user:
@@ -64,18 +64,18 @@ bitcoind:
       user:
         type: pointer
         name: RPC Username
-        description: The username for the RPC user allocated to Lightning Terminal
+        description: The username for the RPC user allocated to Mempool
         subtype: package
         package-id: btc-rpc-proxy
         target: config
         multi: false
-        selector: '$.users.[?(@.name == "lightning-terminal")].name'
+        selector: '$.users.[?(@.name == "mempool")].name'
       password:
         type: pointer
         name: RPC Password
-        description: The password for the RPC user allocated to Lightning Terminal
+        description: The password for the RPC user allocated to Mempool
         subtype: package
         package-id: btc-rpc-proxy
         target: config
         multi: false
-        selector: '$.users.[?(@.name == "lightning-terminal")].password'
+        selector: '$.users.[?(@.name == "mempool")].password'
